<resources>
    <string name="app_name">eMeter</string>
    <string name="logout">Kijelentkezés</string>
    <string name="emailAddress">E-mail címed</string>
    <string name="newPassword">Új jelszó kérése</string>
    <string name="cancel">Mégse</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="forgotPassword">Elfelejtett jelszó</string>
    <string name="send">Küldés</string>
    <string name="address">Lakcím</string>
    <string name="phoneNumber">+36-20/123-4567</string>
    <string name="passwordAgain">Jelszó újra</string>
    <string name="password">Jelszó</string>
    <string name="email">Email</string>
    <string name="fullName">Teljes név</string>
    <string name="logoDescription">Az applikáció logója.</string>
    <string name="description">Áramlejelentő</string>
    <string name="consumption_reporting">Új bejelentés</string>
    <string name="date">Dátumtól (pl. 2025-05-25)</string>
    <string name="consumption">Fogyasztás (kWh)</string>
    <string name="comment">Megjegyzés (opcionális)</string>
    <string name="save">Mentés</string>
    <string name="back">Vissza</string>
    <string name="readings_list">Fogyasztási bejelentések listája</string>
    <string name="annualConsumption">Éves fogyasztás: -</string>
    <string name="latestConsumption">Legutóbbi fogyasztás</string>
    <string name="date_">Dátum: -</string>
    <string name="concumption_">Fogyasztás: -</string>
    <string name="expected_cost">Várható költség: -</string>
    <string name="latestReadings">Legutóbbi bejelentések</string>
    <string name="newReading">Új bejelentés</string>
    <string name="viewAll">Összes megtekintése</string>
    <string name="tillDate">Dátumig</string>
    <string name="base">A logo alapja</string>
    <string name="person">A logón szereplő emberke</string>
    <string name="lightning">A villám jel</string>
    <string name="readingExample_1">1. Bejelentés – 2025-05-12</string>
    <string name="readingExample_2">Fogyasztás: 11.0 kWh</string>
    <string name="reading_reported_on">Bejelentés: %1$s</string>
    <string name="reading_period_days">Időszak: %1$d nap</string>
    <string name="reading_old_entry">Régi bejegyzés (nincs bejelentési dátum)</string>
    <string name="reading_start_date">Kezdő dátum: %1$s</string>
    <string name="reading_consumption_cost">Fogyasztás: %1$.1f kWh\nVárható költség: %2$d Ft</string>
    <string name="reading_no_data">Nincs adat.</string>
    <string name="reading_fetch_error">Hiba az adatok lekérdezésekor: %1$s</string>
    <string name="no_annual_data">Nem sikerült betölteni az éves adatokat.</string>
    <string name="no_readings_data">Nem sikerült betölteni a bejelentéseket.</string>
    <string name="yearly_summary">Ebben az évben eddig: %1$.1f kWh (~%2$d Ft)</string>
    <string name="error_fill_all_fields">Töltsd ki az összes mezőt!</string>
    <string name="login_success">Sikeres bejelentkezés!</string>
    <string name="error_bad_email_format">Az e-mail cím formátuma helytelen.</string>
    <string name="error_no_user">Nem található felhasználó a megadott e-mail címmel.</string>
    <string name="error_wrong_password">Hibás jelszó. Kérlek, próbáld újra.</string>
    <string name="error_no_internet">Nincs internetkapcsolat.</string>
    <string name="error_too_many_attempts">Túl sok próbálkozás. Próbáld meg később.</string>
    <string name="error_invalid_credentials">A hitelesítési adatok érvénytelenek vagy lejártak.</string>
    <string name="error_generic">Hiba: %1$s</string>
    <string name="error_email_required">Add meg az e-mail címedet!</string>
    <string name="error_password_required">Add meg a jelszavadat!</string>
</resources>