<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#121212">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <include
            android:id="@+id/headerLogo"
            layout="@layout/header_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:backgroundTint="#FFFFFF"
            android:layout_marginTop="100dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintTop_toBottomOf="@id/headerLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            android:backgroundTint="#FFFFFF"
            android:layout_marginTop="16dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:backgroundTint="#4CAF50"
            android:textColor="#FFFFFF"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:backgroundTint="#2196F3"
            android:textColor="#FFFFFF"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:textAllCaps="false"
            android:backgroundTint="#FF9800"
            android:textColor="#FFFFFF"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            app:layout_constraintTop_toBottomOf="@id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
